--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "shortcuts": [],
   "icons": [
     {
-      "src": "logo192x192.png",
+      "src": "logo192x192.png?v=20220305",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512x512.png",
+      "src": "logo512x512.png?v=20220305",
       "type": "image/png",
       "sizes": "512x512"
     }
